--- a/CPCSharp.App/Views/MainWindow.xaml
+++ b/CPCSharp.App/Views/MainWindow.xaml
@@ -1,10 +1,10 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:CPCSharp.ViewModels;assembly=CPCSharp"
+        xmlns:vm="clr-namespace:CPCSharp.App.ViewModels;assembly=CPCSharp.App"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="CPCSharp.Views.MainWindow" 
+        x:Class="CPCSharp.App.Views.MainWindow" 
         xmlns:pages="clr-namespace:CPCSharp"
         Title="CPCSharp">
 
