Wire up a load of keys and render the screen every frame. Rendering is very inefficient as the screen is calculated from RAM every time we want to draw it. We need to buffer pixels as they're addressed by the CRTC. More to add to the TODO list :)

--- a/CPCSharp.App/Views/DebugWindow.xaml
+++ b/CPCSharp.App/Views/DebugWindow.xaml
@@ -56,6 +56,7 @@
       <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal">
           <TextBlock Text="PC: " /><TextBlock Text="{Binding Snapshot.Cpu.PC, Converter={StaticResource ShortHexValueConverter}}" />
+          <TextBlock Text="Frequency: " /><TextBlock Text="{Binding Snapshot.FrequencyMHz }" /><TextBlock Text="MHz" />
         </StackPanel>
         <TextBlock Text="Stack: " />
         <ItemsControl Items="{Binding Snapshot.Stack}">
