Some tweaks to improve debugging. More registers visible. Fixes lack of frame flyback interrupt Interrupt comparison of the HSYNC counter described at https://cpctech.cpc-live.com/docs/ints.html is the opposite of what it should be. INT should only fire if HSYNC count >= 32 when VSYNC occurs but the web page describes the opposite

--- a/CPCSharp.App/Views/DebugWindow.xaml
+++ b/CPCSharp.App/Views/DebugWindow.xaml
@@ -102,6 +102,17 @@
             <TextBlock Text="HL': " /><TextBlock Text="{Binding Snapshot.Cpu.HL_, Converter={StaticResource ShortHexValueConverter}}" />
           </StackPanel>
         </Grid>
+        <StackPanel Orientation="Vertical">
+          <StackPanel Orientation="Horizontal">
+            <TextBlock Text="IX: " /><TextBlock Text="{Binding Snapshot.Cpu.IX, Converter={StaticResource ShortHexValueConverter}}" />
+          </StackPanel>
+          <StackPanel Orientation="Horizontal">
+            <TextBlock Text="IY: " /><TextBlock Text="{Binding Snapshot.Cpu.IY, Converter={StaticResource ShortHexValueConverter}}" />
+          </StackPanel>
+          <StackPanel Orientation="Horizontal">
+            <TextBlock Text="SP: " /><TextBlock Text="{Binding Snapshot.Cpu.SP, Converter={StaticResource ShortHexValueConverter}}" />
+          </StackPanel>
+        </StackPanel>
         <TextBlock Text="Stack: " />
         <ItemsControl Items="{Binding Snapshot.Stack}">
             <ItemsControl.ItemsPanel>
