--- a/CPCSharp.App/Views/MainWindow.xaml
+++ b/CPCSharp.App/Views/MainWindow.xaml
@@ -3,10 +3,13 @@
         xmlns:vm="clr-namespace:CPCSharp.App.ViewModels;assembly=CPCSharp.App"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="CPCSharp.App.Views.MainWindow" 
         xmlns:pages="clr-namespace:CPCSharp"
-        Title="CPCSharp">
+        Title="CPCSharp"
+        Width="800"
+        Height="600"
+        MaxWidth="800" MaxHeight="600" MinWidth="800" MinHeight="600">
 
     <Design.DataContext>
         <vm:MainWindowViewModel/>
