--- a/CPCSharp.Avalonia/Views/MainWindow.xaml
+++ b/CPCSharp.Avalonia/Views/MainWindow.xaml
@@ -9,6 +9,7 @@
         Title="CPCSharp"
         Width="800"
         Height="600"
+        Icon="/Assets/appicon.ico"
         MaxWidth="800" MaxHeight="600" MinWidth="800" MinHeight="600">
 
     <Design.DataContext>
