--- a/CPCSharp.Avalonia/Views/MainWindow.xaml
+++ b/CPCSharp.Avalonia/Views/MainWindow.xaml
@@ -6,18 +6,12 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="CPCSharp.App.Views.MainWindow" 
         xmlns:pages="clr-namespace:CPCSharp"
-        Title="CPCSharp"
+        Title="CPC#"
         Width="800"
         Height="600"
-        Icon="/Assets/appicon.ico"
-        MaxWidth="800" MaxHeight="600" MinWidth="800" MinHeight="600">
-
+        Icon="/Assets/appicon.ico">
     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-    <StackPanel>
-        <Border Background="Black" BorderBrush="Gainsboro" BorderThickness="1">
-            <Image Stretch="Fill" Width="800" Height="600" Source="{Binding ScreenBitmap}" />
-        </Border>
-    </StackPanel>
+    <Image Stretch="Fill" Source="{Binding ScreenBitmap}" />
 </Window>
