--- a/CPCSharp.Avalonia/Views/MainWindow.xaml
+++ b/CPCSharp.Avalonia/Views/MainWindow.xaml
@@ -10,6 +10,17 @@
         Width="800"
         Height="600"
         Icon="/Assets/appicon.ico">
+    <NativeMenu.Menu>
+        <NativeMenu>
+            <NativeMenuItem Header="File">
+                <NativeMenuItem.Menu>
+                <NativeMenu>
+                    <NativeMenuItem Header="Load Tape..." Command="{Binding LoadTape}" />
+                </NativeMenu>
+                </NativeMenuItem.Menu>
+            </NativeMenuItem>
+        </NativeMenu>
+    </NativeMenu.Menu>
     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
