--- a/CPCSharp.Avalonia/Views/DebugWindow.xaml
+++ b/CPCSharp.Avalonia/Views/DebugWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="CPCSharp.App.Views.DebugWindow"
         xmlns:conv="clr-namespace:CPCSharp.App.ValueConverters"
-        Title="AvaloniaAppTemplate">
+        Title="Debugger">
   <Design.DataContext>
     <vm:DebugWindowViewModel/>
   </Design.DataContext>
