--- a/CPCSharp.Avalonia/Views/MainWindow.xaml
+++ b/CPCSharp.Avalonia/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="CPCSharp.App.Views.MainWindow" 
-        xmlns:pages="clr-namespace:CPCSharp"
+        xmlns:page="clr-namespace:CPCSharp.App.Views"
         Title="CPC#"
         Width="800"
         Height="600"
@@ -15,7 +15,19 @@
             <NativeMenuItem Header="File">
                 <NativeMenuItem.Menu>
                 <NativeMenu>
-                    <NativeMenuItem Header="Load Tape..." Command="{Binding LoadTape}" />
+                    <NativeMenuItem 
+                        Header="Load Tape..." 
+                        Command="{Binding LoadTape}"
+                        Gesture="{x:Static page:MainWindow.OpenTapeGesture}" />
+                </NativeMenu>
+                </NativeMenuItem.Menu>
+            </NativeMenuItem>
+            <NativeMenuItem Header="System">
+                <NativeMenuItem.Menu>
+                <NativeMenu>
+                    <NativeMenuItem Header="Debugger..." Clicked="OpenDebuggerClicked" />
+                    <NativeMenuItemSeperator />
+                    <NativeMenuItem Header="Reset" />
                 </NativeMenu>
                 </NativeMenuItem.Menu>
             </NativeMenuItem>
@@ -24,5 +36,8 @@
     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-    <Image Stretch="Fill" Source="{Binding ScreenBitmap}" />
+    <DockPanel>
+        <NativeMenuBar DockPanel.Dock="Top" />
+        <Image Stretch="Fill" Source="{Binding ScreenBitmap}" />
+    </DockPanel>
 </Window>
