Finally add a working reset

--- a/CPCSharp.Avalonia/Views/MainWindow.xaml
+++ b/CPCSharp.Avalonia/Views/MainWindow.xaml
@@ -27,7 +27,7 @@
                 <NativeMenu>
                     <NativeMenuItem Header="Debugger..." Clicked="OpenDebuggerClicked" />
                     <NativeMenuItemSeperator />
-                    <NativeMenuItem Header="Reset" />
+                    <NativeMenuItem Header="Reset" Command="{Binding Reset}" />
                 </NativeMenu>
                 </NativeMenuItem.Menu>
             </NativeMenuItem>
