--- a/CPCSharp.Avalonia/App.xaml
+++ b/CPCSharp.Avalonia/App.xaml
@@ -4,8 +4,10 @@
              x:Class="CPCSharp.App.App">
     <NativeMenu.Menu>
         <NativeMenu>
+            <NativeMenuItem Header="About CPC#" Clicked="OpenAbout" />
+            <!--<NativeMenuItemSeperator />
             <NativeMenuItem Header="Preferences..." Command="{Binding OpenPreferences}">
-            </NativeMenuItem>
+            </NativeMenuItem>-->
         </NativeMenu>
     </NativeMenu.Menu>
     <Application.DataTemplates>
