Implement AY noise using the same algorithm as the Swift implementation. Add license info for NAudio

--- a/CPCSharp.Avalonia/Views/LegalBitsDialog.xaml
+++ b/CPCSharp.Avalonia/Views/LegalBitsDialog.xaml
@@ -16,7 +16,7 @@
             <Setter Property="Margin" Value="0 15 0 10" />
         </Style>
         <Style Selector="TextBlock.LicenseText">
-            <Setter Property="FontFamily" Value="Menlo, Monaco, 'Courier New', monospace" />
+            <Setter Property="FontFamily" Value="Courier New" />
         </Style>
     </Window.Styles>
     <ScrollViewer Width="600" Height="475"
@@ -54,7 +54,7 @@ SOFTWARE.
                 Z80#
             </TextBlock>
             <TextBlock>
-                CPC# makes use of the Z80 microcprocessor emulator Z80#. The following license terms are reproduced in accordance with its license:
+                CPC# makes use of the Z80 microcprocessor emulator Z80#. The following copyright notice and license terms are reproduced in accordance with its license:
             </TextBlock>
             <TextBlock Classes="LicenseText">
                 MIT License
@@ -83,7 +83,7 @@ SOFTWARE.
                 Avalonia
             </TextBlock>
             <TextBlock>
-            CPC# makes use of the Avalonia cross platform UI framework. The following license terms are reproduced in accordance with its license:
+            CPC# makes use of the Avalonia cross platform UI framework. The following copyright notice and license terms are reproduced in accordance with its license:
             </TextBlock>
             <TextBlock Classes="LicenseText">
                 The MIT License (MIT)
@@ -95,6 +95,22 @@ Permission is hereby granted, free of charge, to any person obtaining a copy of 
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+            </TextBlock>
+            <TextBlock Classes="Header">
+                NAudio
+            </TextBlock>
+            <TextBlock>
+            CPC# makes use of NAudio for audio output when running on Windows systems. The following copyright notice and license terms are reproduced in accordance with its license:
+            </TextBlock>
+            <TextBlock Classes="LicenseText">
+                Copyright 2020 Mark Heath
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
             </TextBlock>
         </StackPanel>
     </ScrollViewer>
